<resources>
    <string name="app_name">MyTools</string>
    <string name="title_activity_tools">ToolsActivity</string>
    <string name="zwtp">指纹图片</string>
    <string name="djyzzw">点击Home键验证指纹</string>
    <string name="mt">MyTools</string>
    <string name="t1">后缀名一键删除/添加</string>
    <string name="t2">查询类型数量</string>
    <string name="t3">http下载</string>
    <string name="t4">快捷复制</string>
    <string name="t5">FTP下载</string>
    <string name="t6">Wifi密码</string>
    <string name="t7">局域网设备</string>
    <string name="t8">支付宝获取能量</string>
    <string name="t9">yc调度模式切换</string>
    <string name="t10">WifiIP静态/DHCP切换</string>
    <string name="t12">App提取</string>
    <string name="t13">密码本</string>
    <string name="t14">二维码</string>
    <string name="f1">是否启用指纹</string>
    <string name="f2"></string>
    <string name="f3">是否隐藏无法使用的功能</string>
    <string name="f4"></string>
    <string name="xg">修改参数</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="zhz">0/0</string>
    <string name="xgcs">修改</string>
    <string name="wjwz">文件位置:</string>
    <string name="bcmc">保存名称:</string>
    <string name="kqfw">开启服务</string>
    <string name="ip">IP:</string>
    <string name="port">PORT:</string>
    <string name="user">USER:</string>
    <string name="password">PASSWORD:</string>
    <string name="ftpserverpath">FTPSERVERPATH:</string>
    <string name="ftplocalpath">FTPLOCALPATH:</string>
    <string name="ftpfilename">FTPFILENAME:</string>
    <string name="xz">下载</string>
    <string name="jdt">进度条</string>
    <string name="httplj">http连接:</string>
    <string name="fz">复制</string>
    <string name="dyxz">单一下载:</string>
    <string name="xcsl">线程数量:</string>
    <string name="z">0</string>
    <string name="tw">20</string>
    <string name="wjhz">文件后缀:</string>
    <string name="xzdz">下载地址:</string>
    <string name="xzml">下载目录:</string>
    <string name="bh">编号</string>
    <string name="xzjd">下载进度</string>
    <string name="wjdx">文件大小</string>
    <string name="wjmc">文件名称</string>
    <string name="wifizt">WIFI状态:</string>
    <string name="gb">关闭</string>
    <string name="kq">开启</string>
    <string name="ljms">连接模式:</string>
    <string name="dhcp">DHCP</string>
    <string name="jt">静态</string>
    <string name="wlj">未连接</string>
    <string name="wifiId">WIFIID:</string>
    <string name="wifiSafe">WIFISAFE:</string>
    <string name="wifiList">WIFILIST:</string>
    <string name="jtipdz">静态IP地址:</string>
    <string name="wg">网关:</string>
    <string name="wlqzcd">网络前置长度:</string>
    <string name="dns1">DNS1:</string>
    <string name="wjmm">忘记密码</string>
    <string name="ljwifi">连接WIFI</string>
    <string name="sm">扫描</string>
    <string name="zjmc">主机名称</string>
    <string name="mac">MAC</string>
    <string name="lanip">IP</string>
    <string name="myslx">蚂蚁森林X:</string>
    <string name="mysly">蚂蚁森林Y:</string>
    <string name="nlqx">能量球X:</string>
    <string name="nlqy">能量球Y:</string>
    <string name="cssj">成熟时间:</string>
    <string name="s">时</string>
    <string name="f">分</string>
    <string name="m">秒</string>
    <string name="sfdt">是否当天:</string>
    <string name="djcs">点击次数:</string>
    <string name="c">次</string>
    <string name="djs">倒计时:</string>
    <string name="zz">00</string>
    <string name="ml">目录:</string>
    <string name="hz">后缀:</string>
    <string name="gl">过滤:</string>
    <string name="schz">删除后缀</string>
    <string name="tjhz">添加后缀</string>
    <string name="qx">全选</string>
    <string name="qxx">取消</string>
    <string name="fx">反选</string>
    <string name="sc">删除</string>
    <string name="cx">查询</string>
    <string name="sstj">筛选条件:</string>
    <string name="fxt">非系统</string>
    <string name="xt">系统</string>
    <string name="bcwz">保存位置:</string>
    <string name="tq">提取</string>
    <string name="desc">app图标</string>
    <string name="pxtj">排序条件:</string>
    <string name="dx">大->小</string>
    <string name="xd">小->大</string>
    <string name="ssyy">搜索应用(名称/包名)</string>
    <string name="tqjd">提取进度:</string>
    <string name="zb">0.00%</string>
    <string name="ssid">SSID</string>
    <string name="wifipassword">PASSWORD</string>
    <string name="sd">省电</string>
    <string name="ph">平衡(默认)</string>
    <string name="xn">性能</string>
    <string name="js">极速</string>
    <string name="ty">停用</string>
    <string name="sz">设置</string>
    <string name="ssmc">搜索名称</string>
    <string name="mcm">名称:</string>
    <string name="zhm">账号:</string>
    <string name="mmm">密码:</string>
    <string name="flm">分类:</string>
    <string name="bc">保存</string>
    <string name="tj">添加</string>
    <string name="dr">导入</string>
    <string name="dc">导出</string>
    <string name="qs">全删</string>
    <string name="nr">内容:</string>
    <string name="smewm">扫描二维码</string>
    <string name="scewm">生成二维码</string>
    <string name="jxewm">解析二维码</string>
    <string name="bcewm">保存二维码</string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">在取景器矩形内放置条码进行扫描.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_error">Error</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_auto_open_web_title">Open web pages automatically</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_industrial_title">1D Industrial</string>
    <string name="preferences_decode_1D_product_title">1D Product</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (β)</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_barcode_scene_mode_title">No barcode scene mode</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_exposure_title">No exposure</string>
    <string name="preferences_disable_metering_title">No metering</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_front_light_auto">Automatic</string>
    <string name="preferences_front_light_off">Off</string>
    <string name="preferences_front_light_on">On</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_history_summary">Store your scans in History</string>
    <string name="preferences_history_title">Add to History</string>
    <string name="preferences_invert_scan_title">Invert scan</string>
    <string name="preferences_invert_scan_summary">Scan for white barcodes on black background. Not available on some devices.</string>
</resources>