<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp">
    <Button android:id="@+id/suffixBtn"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/t1"/>
    <Button android:id="@+id/qrySuBtn"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/t2"/>
    <Button android:id="@+id/httpBtn"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/t3"/>
    <Button android:id="@+id/copyBtn"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/t4"/>
    <Button android:id="@+id/ftpBtn"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/t5"/>
    <Button android:id="@+id/wifiBtn"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/t6"/>
    <Button android:id="@+id/lanBtn"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/t7"/>
    <Button android:id="@+id/nlBtn"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/t8"/>
    <Button android:id="@+id/ycBtn"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/t9"/>
    <Button android:id="@+id/ipBtn"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/t10"/>
    <Button android:id="@+id/appExtractBtn"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/t12"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/f1"/>
        <Switch
            android:id="@+id/toolsFP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/f2"/>
    </LinearLayout>
</LinearLayout>