<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/httplj"/>
        <EditText
            android:id="@+id/httpUrl"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textUri"/>
        <Button
            android:id="@+id/httpCopyBtn"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:text="@string/fz"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dyxz"/>
        <Switch
            android:id="@+id/httpSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/off"
            android:textOn="@string/on"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xcsl"/>
        <EditText
            android:id="@+id/httpThread"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:gravity="center"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/z"
            android:layout_marginStart="5dp"/>
        <SeekBar
            android:id="@+id/httpSeek"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:max="20" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tw"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wjhz"/>
        <EditText
            android:id="@+id/httpSuff"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:gravity="center"
            android:inputType="text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xzdz"/>
        <EditText
            android:id="@+id/httpDir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/httpUpdBtn"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/xg"
            android:layout_gravity="center"
            style="?android:attr/buttonStyle"/>
        <Button
            android:id="@+id/httpDownBtn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/xz"
            style="?android:attr/buttonStyle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/bh"
            android:layout_gravity="center"
            android:gravity="center"/>
        <TextView
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:text="@string/xzjd"
            android:layout_gravity="center"
            android:gravity="center"/>
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/wjdx"
            android:layout_gravity="center"
            android:gravity="center"/>
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/wjmc"
            android:layout_gravity="center"
            android:gravity="center"/>
    </LinearLayout>

    <ListView
        android:id="@+id/httpList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>
