<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp">
    <ListView
        android:id="@+id/appList"
        android:layout_width="match_parent"
        android:layout_height="580dp"></ListView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sstj"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fxt"/>
        <Switch
            android:id="@+id/appSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/off"
            android:textOn="@string/on"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xt"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bcwz"/>
        <EditText
            android:id="@+id/appPath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/appUpdBtn"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/xg"
            style="?android:attr/buttonStyle"/>
        <Button
            android:id="@+id/extractBtn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/tq"
            style="?android:attr/buttonStyle"/>
    </LinearLayout>
</LinearLayout>
