<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp">
        <RadioGroup
            android:id="@+id/ycRG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center">
            <RadioButton
                android:id="@+id/ycSD"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sd"/>
            <RadioButton
                android:id="@+id/ycPH"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ph"/>
            <RadioButton
                android:id="@+id/ycXN"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/xn"/>
            <RadioButton
                android:id="@+id/ycDYC"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/js"/>
            <RadioButton
                android:id="@+id/ycTY"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ty"/>
        </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp">
        <Button
            android:id="@+id/ycBtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/sz" />
    </LinearLayout>
</LinearLayout>
