<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/myslx"/>
        <EditText
            android:id="@+id/nlX"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="number"/>
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/mysly"/>
        <EditText
            android:id="@+id/nlY"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/nlqx"/>
        <EditText
            android:id="@+id/ballX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/nlqy"/>
        <EditText
            android:id="@+id/ballY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/cssj"/>
        <EditText
            android:id="@+id/nlHour"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:gravity="center"
            android:inputType="number"/>
        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="@string/s"/>
        <EditText
            android:id="@+id/nlMinute"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:gravity="center"
            android:inputType="number"/>
        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="@string/f"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/sfdt"/>
        <CheckBox
            android:id="@+id/nlCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/djcs"/>
        <EditText
            android:id="@+id/nlClick"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:gravity="center"
            android:inputType="number"/>
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/c"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/djs"/>
        <EditText
            android:id="@+id/nlDiffHour"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/zz"
            android:enabled="false"
            android:gravity="center"
            android:inputType="number"/>
        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="@string/s"/>
        <EditText
            android:id="@+id/nlDiffMinute"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/zz"
            android:enabled="false"
            android:gravity="center"
            android:inputType="number"/>
        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="@string/f"/>
        <EditText
            android:id="@+id/nlDiffSecond"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/zz"
            android:enabled="false"
            android:gravity="center"
            android:inputType="number"/>
        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="@string/m"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
    <Button
        android:id="@+id/nlUpdBtn"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xg"
        android:layout_gravity="center"
        style="?android:attr/buttonStyle"/>
    <Button
        android:id="@+id/nlStartBtn"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kqfw"
        android:layout_gravity="center"
        style="?android:attr/buttonStyle"/>
    </LinearLayout>
</LinearLayout>
