<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="660dp"
        android:paddingTop="7dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingBottom="7dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp">
        <Button
            android:id="@+id/allSelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/qx"
            style="?android:attr/buttonStyle"/>
        <Button
            android:id="@+id/canelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/qxx"
            style="?android:attr/buttonStyle"/>
        <Button
            android:id="@+id/unSelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/fx"
            style="?android:attr/buttonStyle"/>
        <Button
            android:id="@+id/smdBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sc"
            style="?android:attr/buttonStyle"/>
    </LinearLayout>
</LinearLayout>
